<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_dashboard"
    tools:context="com.braintech.carpooling.mvp.your_rides.activity.YourRidesActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_transparent"></View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_10dp">

        <TextView
            android:id="@+id/txtViewGoingSomeWhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_going_somewhere"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:textSize="@dimen/txt_size_30sp"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/txtViewShareMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_share_msg"
            android:layout_below="@+id/txtViewGoingSomeWhere"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:textSize="@dimen/txt_size_15sp"
            android:layout_centerInParent="true"/>


        <Button
            android:id="@+id/btnOfferARide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_button_background_blue"
            android:text="@string/btn_offer_a_ride"
            android:textColor="@color/color_white"
            android:textSize="@dimen/txt_size_18sp"
            android:layout_below="@+id/txtViewShareMessage"
            android:layout_marginTop="@dimen/margin_40dp"
            />


        <Button
            android:id="@+id/btnFindARide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_button_background_white"
            android:text="@string/btn_find_a_ride"
            android:textColor="@color/sky_blue"
            android:textSize="@dimen/txt_size_18sp"
            android:layout_below="@+id/btnOfferARide"
            android:layout_marginTop="@dimen/margin_15dp"
            />

    </RelativeLayout>

</RelativeLayout>
