<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relLayMain"
    tools:context="com.braintech.carpooling.mvp.offer_a_ride.activity.LeavingFromActivity">


    <include layout="@layout/toolbar_without_title"/>

    <RelativeLayout
        android:id="@+id/relLayTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_10dp"
        android:layout_below="@+id/toolbar_without_title">

    <TextView
        android:id="@+id/txtViewLeavingFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_leaving_form"
        android:textSize="@dimen/txt_size_20sp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/color_black"/>

    <ImageView
        android:id="@+id/imgViewSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewLeavingFrom"
        android:src="@mipmap/ic_search"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginLeft="@dimen/margin_10dp"/>

    <TextView
        android:id="@+id/txtViewFullAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewLeavingFrom"
        android:layout_toRightOf="@+id/imgViewSearch"
        android:text="@string/title_enter_full_address"
        android:layout_marginTop="@dimen/margin_20dp"
        android:textSize="@dimen/txt_size_12sp"
        android:layout_marginLeft="@dimen/margin_20dp"/>

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextViewForLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewFullAddress"
        android:layout_marginTop="@dimen/margin_7dp"
        android:layout_toRightOf="@+id/imgViewSearch"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:background="@android:color/transparent"
        android:textSize="@dimen/txt_size_18sp"
        android:hint="Enter Place Here"/>



<ImageView
    android:id="@+id/imgViewLine"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/autoCompleteTextViewForLocation"
    android:layout_marginTop="@dimen/margin_8dp"
    android:scaleType="centerCrop"
    android:src="@mipmap/ic_line"/>



    <TextView
        android:id="@+id/txtViewUseMyCurrentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_use_my_current_location"
        android:padding="@dimen/margin_3dp"
        android:layout_below="@id/imgViewLine"
        android:layout_marginTop="@dimen/txt_size_15sp"
        android:textColor="@color/sky_blue"
        android:textSize="@dimen/txt_size_12sp"
        android:layout_centerHorizontal="true"
        />

    </RelativeLayout>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/drawable_rectangle_sky_blue"
        android:text="@string/btn_confirm"
        android:textColor="@color/color_white"
        android:textSize="@dimen/txt_size_14sp"
        android:textStyle="bold"
        />

</RelativeLayout>
